# consequence-awareness

./: CLAUDE.md  README.md  pyproject.toml
docs/: design.md  environments.md  task-pairs.md
scripts/: dry_run.py  extract_activations.py  harness.py  prepare_replay.py  rank_activation_layers.py  reconcile_results.py  sync_activation_artifacts.py
tests/: test_extract_activations.py  test_harness.py  test_prepare_replay.py  test_rank_activation_layers.py  test_sync_activation_artifacts.py
