[project]
name = "consequence-awareness"
version = "0.1.0"
description = "White-box consequence awareness in small open models"
requires-python = ">=3.11, <3.12"
dependencies = [
    "openai>=1.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
analysis = [
    "torch>=2.4",
    "transformers>=4.51",
    "safetensors>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
